[package]
name = "actix-extensible-rate-limit"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rate limiting middleware for actix-web"
repository = "https://github.com/jacob-pro/actix-extensible-rate-limit"
homepage = "https://github.com/jacob-pro/actix-extensible-rate-limit"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
async-trait = "0.1.59"
dashmap = { version = "5.4.0", optional = true }
futures = "0.3.25"
log = "0.4.17"
once_cell = "1.16.0"
redis = { version = "0.22.1", default-features = false, features = ["tokio-comp", "aio", "connection-manager"], optional = true }
thiserror = "1.0.37"

[features]
default = ["dashmap"]

[dev-dependencies]
tokio = { version = "1", features = ["time", "test-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
